Wed Sep 19 17:46:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.5 released.

Sat Sep  8 07:13:42 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: waitfor(): improvement. thanks to
	  nobu.nakada@nifty.ne.jp

Sat Sep  8 04:34:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_restore_context): save current value of
	  lastline and lastmatch in the thread struct for later restore.

	* eval.c (rb_thread_save_context): restore lastline and lastmatch.

Fri Sep  7 11:27:56 2001  akira yamada  <akira@ruby-lang.org>

	* numeric.c (flo_to_s): should handle negative float value.

Fri Sep  7 09:44:44 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: waitfor(): bug fix.

Fri Sep  7 07:11:34 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi.rb: CGI#doctype(): bug fix (html4Fr).

	* lib/net/telnet.rb, lib/cgi.rb: remove VERSION, RELEASE_DATE,
	  VERSION_CODE, RELEASE_CODE. please use REVISION.

	* lib/cgi.rb: CGI#header(): bug fix.

	* lib/net/telnet.rb, lib/cgi.rb: concat --> +=

Thu Sep  6 17:38:18 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dir.c (dir_s_chdir): raise if environment variable HOME/LOGDIR
	  not set.

	* dir.c (glob_helper): avoid infinite loop on a file name with
	  wildcard characters. (ruby-bugs#PR177)

Thu Sep  6 03:15:24 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): should check whole ancestors to
	  avoid duplicate module inclusion.

Thu Sep  6 14:27:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_hexdigest): remove a debug
	  print.

Thu Sep  6 14:00:49 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_digest,
	  rb_digest_base_s_hexdigest): ensure that a string is given.

Thu Sep  6 13:28:51 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (_regexp_quote): fix quote handling, again.

Thu Sep  6 12:02:49 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>